creating shim game board

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,8 @@
 /**
  * main.css - styles for game main entry page.
  */
+
+/* page scaffolding */
 html, body {
   height: 100%;
   width: 100%;
@@ -14,6 +16,7 @@ html, body {
   width: 100%;
 }
 
+/* mines game scaffolding */
 .mines-wrapper {
   bottom: 0;
   padding: 20px;
@@ -25,4 +28,96 @@ html, body {
   background: #ccc;
   height: 100%;
   width: 100%;
+}
+.mines-inner {
+  height: 100%;
+  width: 100%;
+}
+
+/* hex game tiles */
+.tile {
+  background-image: url("../image/sprite.svg");
+  background-position: -48px 0;
+  height: 42px;
+  position: absolute;
+  width: 48px;
+}
+.cursor {
+  background-position: 0 0;
+}
+.g1 {
+  background-position: -96px 0;
+}
+.g2 {
+  background-position: 0 -42px;
+}
+.g3 {
+  background-position: -48px -42px;
+}
+.g4,
+.g5 {
+  background-position: -96px -42px;
+}
+.g32 {
+  background-position: 0 -84px;
+}
+.g64 {
+  background-position: -48px -84px;
+}
+.g128 {
+  background-position: -96px -84px;
+}
+.n1 {
+  background-position: -144px 0;
+}
+.n2 {
+  background-position: -192px 0;
+}
+.n3 {
+  background-position: -240px 0;
+}
+.n4 {
+  background-position: -288px 0;
+}
+.n5 {
+  background-position: -336px 0;
+}
+.n6 {
+  background-position: -384px 0;
+}
+.n7 {
+  background-position: -144px -42px;
+}
+.n8 {
+  background-position: -192px -42px;
+}
+.n9 {
+  background-position: -240px -42px;
+}
+.n10 {
+  background-position: -288px -42px;
+}
+.n11 {
+  background-position: -336px -42px;
+}
+.n12 {
+  background-position: -384px -42px;
+}
+.n13 {
+  background-position: -144px -84px;
+}
+.n14 {
+  background-position: -192px -84px;
+}
+.n15 {
+  background-position: -240px -84px;
+}
+.n16 {
+  background-position: -288px -84px;
+}
+.n17 {
+  background-position: -336px -84px;
+}
+.n18 {
+  background-position: -384px -84px;
 }
